      default prior to release.  This will remove the legacy definitions
      of \code{PI}, \code{Calloc}, \code{Realloc} and \code{Free}: use
      \code{M_PI}, \code{R_Calloc}, \code{R_Realloc} or \code{R_Free}
      instead.

      \item The deprecated S-compatibility macros \code{F77_COM} and
      \code{F77_COMDECL} have been removed from header \file{R_ext/RS.h}.
    }
  }

  \subsection{UTILITIES}{
    \itemize{
      \item \command{R CMD check --as-cran} will compile C++ code with
      \code{-DR_NO_REMAP}.

      \item \command{R CMD check --as-cran} notes bad parts in the
      \file{DESCRIPTION} file's URL fields.

      \item Installation will define \code{STRICT_R_HEADERS} if
      environment variable \env{_R_USE_STRICT_R_HEADERS_} is set to a
      true value: this is done by \command{R CMD check --as-cran}.

      \item \command{R CMD check} now reports more warnings on
      long-deprecated/obsolete Fortran features from
      \command{gfortran -Wall}.  For hints on how to modernize these,
      see
      \url{https://fortranwiki.org/fortran/show/Modernizing+Old+Fortran}.

      \item Since almost all supported \R versions now use UTF-8,
      \command{R CMD check} no longer by default reports on marked
      UTF-8 or Latin-1 strings in character data.  Set environment
      variable \env{_R_CHECK_PACKAGE_DATASETS_SUPPRESS_NOTES_} to a
      false value for the previous behaviour.

      \item \code{tools::checkDocFiles()} notes more cases of
      usage documentation without corresponding \verb{\alias}.
    }
  }

  \subsection{BUG FIXES}{
    \itemize{
      \item \code{update_pkg_po()} now copies \file{.mo} files to the
      \pkg{translation} package even if a \file{DESCRIPTION} file
      exists, thanks to \I{Michael Chirico} fixing \PR{18694}.

      \item Auto-generated \code{citation()} entries no longer include
      (additional) URLs in the \samp{note} field (\PR{18547}).
